2006-12-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::ExtBuilder): Refactored for
	uniformity.

2006-12-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/gem_commands (Gem::OutdatedCommand): Add a way to see
	which gems are out-of-date.

	* setup.rb: Ignore errors for .config and InstalledFiles when
	the source path is read-only/NFS.  Fixes bugs #1395 and #1374.  Patch
	by Ryan Davis.

	* bin/gem_server: Pull code out into lib/rubygems/server.rb for
	reusability.  Closes Feature Request #2220 by Chris Morris.

2006-12-16  Chad Fowler <chad@chadfowler.com>

	* test/: Added functional test for extension gems proving that
	non-compiling extensions don't result in success message.
   
	* lib/rubygems/specification.rb: Raise exception if loaded spec is
	nil.  Closes bug #7299.
   
	* test/gemenvironment.rb: Clean out gemhome every time to avoid dirty
	directory failing tests.
   
	* lib/rubygems/installer.rb: Change uninstall to require a full gem
	name (not a partial match).  Fixes bug #6007 and related unreported
	issues.
   
2006-12-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb (Gem::Uninstaller): Correctly uninstall
	executables if GEM_HOME is set.  Patch #2264 by Sylvain Joyeux.

	* lib/rubygems.rb (Gem::loaded_specs): Expose list of currently loaded
	gems.

	* lib/rubygems/gem_commands (Gem::UninstallCommand): Allow multiple
	gems to be uninstalled at once.

2006-12-14  Eric Hodel  <drbrain@segment7.net>

	* post-install.rb: Don't attempt to read unreadable files.  Fixes
	bug #2851.

2006-12-13  Eric Hodel  <drbrain@segment7.net>

	* pre-install.rb.rb, post-install.rb: Don't call manage_gems because
	we don't have sources installed yet.  Bump version requirement to
	1.8.2 since rubygems/open-uri.rb was removed.  Should fix bug #6206.

	* lib/rubygems/installer.rb (Gem::Installer#build_extensions): Capture
	stderr into results when building extensions.
