@@ -91,6 +91,11 @@ module Gem
       source_index_hash.each do |source_uri, source_index|
         specs = source_index.search(/^#{Regexp.escape gem_name}$/i,
                                     version_requirement)
+        # TODO move to SourceIndex#search?
+        ruby_version = Gem::Version.new RUBY_VERSION
+        specs = specs.select do |spec|
+          spec.required_ruby_version.satisfied_by? ruby_version
+        end
         specs.each { |spec| specs_n_sources << [spec, source_uri] }
       end
 
