@@ -2,6 +2,9 @@
 
 	* lib/rubygems/installer.rb (Gem::ExtBuilder): Refactored for
 	uniformity.
+	* lib/rubygems/remote_installer.rb
+	(Gem::RemoteInstaller#specs_n_sources_matching): Don't display gems
+	that can't be installed.
 
 2006-12-18  Eric Hodel  <drbrain@segment7.net>
 
